--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -898,9 +898,18 @@ subquestion: |
   
   Before you begin, check to be sure you actually need to pay a court filing fee.
   
-  * When you ask the court for a Relief from Abuse (RFA) order, there are no court fees. It is free.
-  * If you are just submitting an Answer to a court action, you don't have a court filing fee. (If you have counterclaims you probably will have a filing fee.)
-  * Visit the Vermont Judiciary website to learn more about [filing and service fees](https://www.vermontjudiciary.org/fees) and [asking to file court papers for free in Vermont](https://www.vermontjudiciary.org/self-help/application-waive-filing-fees-and-service-costs).
+  When you ask the court for a Relief from Abuse (RFA) order, there are no court fees. It is free. Here is the full list of forms that have no filing fee:
+  
+  - Request for Relief from Abuse
+  - Request for Abuse Prevention for a Vulnerable Adult
+  - Request for Order Against Stalking
+  - Request for Order Against Sexual Assault
+  - Request for Extreme Risk Protection Order
+  - Abusive Litigation
+  
+  If you are just submitting an Answer to a court action, you don't have a court filing fee. (If you have counterclaims you probably will have a filing fee.)
+  
+  Visit the Vermont Judiciary website to learn more about [filing and service fees](https://www.vermontjudiciary.org/fees) and [asking to file court papers for free in Vermont](https://www.vermontjudiciary.org/self-help/application-waive-filing-fees-and-service-costs).
   
   <h4>What you will need to complete this form</h4>
   
